--- a/MGABAGO/GUI/StatusEvaluationPanel.form
+++ b/MGABAGO/GUI/StatusEvaluationPanel.form
@@ -33,12 +33,7 @@
     <Component class="javax.swing.JComboBox" name="SubjectDB">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="ALL"/>
-            <StringItem index="1" value="COS"/>
-            <StringItem index="2" value="COE"/>
-            <StringItem index="3" value="CLA"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Hand Cursor"/>
